headshot alignment fix

--- a/sass/theme/_theme.scss
+++ b/sass/theme/_theme.scss
@@ -263,11 +263,12 @@
 	}
 	li {
 		margin-bottom: 30px;
+		clear: both;
 	}
 	.headshot {
 		width: 150px;
 		height: auto;
-		margin: 0 30px 10px 0;
+		margin: 0 30px 30px 0;
 	}
 	h3 {
 		margin: 0;
